Roundcube Webmail MarkAsJunk2
=============================

Version 1.10 (2017-01-02, rc-1.1)
=================================================
 * Add JS event markasjunk2-update to allow other plugins to influence the spam/ham options show
 * Add init method to allow drivers to access markasjunk2-update JS event
 * Replace config options markasjunk2_mb_toolbar and markasjunk2_cp_toolbar with new markasjunk2_toolbar option

Version 1.9 (2015-01-06, rc-1.1)
=================================================
 * Use get_part_body add in 48ba4414b3
 * Support multi-folder search results (66536974fe)
 * Drop IE6 support

Version 1.8.2 (2014-03-30, rc-1.0)
=================================================
 * Add amavis_blacklist driver (by Der-Jan)

Version 1.8.1 (2014-01-01, rc-1.0)
=================================================
 * Improve sa_detach driver, make sure only original message is detached
 * Correct skin folder structure for Roundcube packaging

Version 1.8 (2013-12-01, rc-1.0)
=================================================
 * Use sauserprefs_userid config setting in sa_blacklist driver
 * Use plugin API to set message flags (05da157)
 * Update config file var names to match core
 * Add support for global sql_debug option
 * Improve handling of multiple marcos in cmd_learn driver

Version 1.7 (2013-05-19, rc-1.0)
=================================================
 * add option to call markasjunk2 functions on message move
 * rcmail_deliver_message() > deliver_message()
 **** code branching/tagging no longer sync'd to roundcube versions ****

Version 1.6 (2013-03-03, rc-0.9)
=================================================
 * merge PDO branch (de56ea1909)
 * rename default skin to classic (c40419bdfe)
 * add new edit_headers driver
 * rcube_ui > rcube_utils (r6091)
 * Update for Roundcube framework

Version 1.5 (2012-06-19, rc-0.8)
=================================================
 * Fixed drivers namespace issues

Version 1.4 (2012-01-21, rc-0.8)