@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+ * "Flattened" the larry theme: fresher look by removing shadows and gradients
+
 Version 1.10 (2017-01-02, rc-1.1)
 =================================================
  * Add JS event markasjunk2-update to allow other plugins to influence the spam/ham options show
